Fix font sizes and spacing

--- a/frontend/assets/scss/components/search-form.component.scss
+++ b/frontend/assets/scss/components/search-form.component.scss
@@ -1,5 +1,5 @@
 .search-form {
-  background-color: rgba($green, 0.07);
+  background-color: rgba($green, 0.1);
   padding: $spacingMedium;
   border-radius: $spacingSmall;
 
